fix: image overflow

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,8 @@ section {
 }
 
 .home-img {
-    height: 80vh;
+    max-height: 80vh;
+    max-width: 100vw;
 }
 
 .title-home {
